<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#303F9F"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_connection_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:text="@string/switch_state"/>

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_private"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow"
                    android:text="@string/yes"/>

                <RadioButton
                    android:id="@+id/radio_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow"
                    android:text="@string/no"/>
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_online_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF4081"
                android:background="@drawable/bg_button_connect"
                android:text="@string/create"/>

            <TextView
                android:id="@+id/text_newKey"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/yellow"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:text="@string/room"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout_createPsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textColor="@color/yellow"
                android:textSize="15sp"
                android:gravity="right"
                android:text="@string/text_psw"/>

            <TextView
                android:id="@+id/text_createPsw"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/yellow"
                android:textSize="15sp"
                android:gravity="left"
                android:text="@string/room"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/yellow"
                android:text="@string/or"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_online_joinin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF4081"
                android:background="@drawable/bg_button_connect"
                android:text="@string/join_in"/>

            <EditText
                android:id="@+id/text_existKey"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="5"
                android:textColor="@color/yellow"
                android:textSize="25sp"
                android:inputType="number"
                android:digits="0123456789"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:hint="@string/room"
                android:textColorHint="@color/brown"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Layout_inputPsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/text_inputPsw"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="5"
                android:textColor="@color/yellow"
                android:textSize="25sp"
                android:inputType="number"
                android:digits="0123456789"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:hint="@string/input_psw"
                android:textColorHint="@color/brown"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:textSize="13sp"
            android:textAllCaps="false"
            android:text="@string/onLine_agent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_online_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF4081"
            android:background="#303F9F"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:text="@string/onLine_exit"/>

    </LinearLayout>




</LinearLayout>
