<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#303F9F"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure_to_exit"
            android:textSize="17sp"
            android:textColor="@color/yellow"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_exit_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF4081"
            android:background="#303F9F"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:text="@string/exit_no"/>

        <Button
            android:id="@+id/bt_exit_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF4081"
            android:background="#303F9F"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:text="@string/exit_yes"/>

    </LinearLayout>




</LinearLayout>
