<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#303F9F"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/introduction"
            android:textSize="17sp"
            android:textColor="@color/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/author"
            android:textSize="15sp"
            android:textColor="@color/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="软件架构第二小组"
            android:layout_marginBottom="3dp"
            android:textSize="15sp"
            android:textColor="@color/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="41512154 陈明哲"
            android:textSize="15sp"
            android:textColor="@color/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="41512151 张海浩"
            android:textSize="15sp"
            android:textColor="@color/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="41512157 谢    敏"
            android:textSize="15sp"
            android:textColor="@color/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="41512153 刘奇灿"
            android:textSize="15sp"
            android:textColor="@color/yellow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="41512178 杨    美"
            android:textSize="15sp"
            android:textColor="@color/yellow"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_question_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF4081"
            android:background="#303F9F"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:text="@string/introduction_ok"/>

    </LinearLayout>




</LinearLayout>
